Prevent hover confusion on mobile + padding

--- a/src/components/albumFeed/AlbumFeedFilters.module.scss
+++ b/src/components/albumFeed/AlbumFeedFilters.module.scss
@@ -33,10 +33,13 @@
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 
-  &.selected,
-  &:hover {
+  &.selected {
     background-color: #000000;
     color: #ffffff;
+  }
+
+  &:hover {
+    outline: 1px solid #000000;
   }
 }
 
@@ -60,10 +63,13 @@
   text-align: center;
   flex: 1;
 
-  &.selected,
-  &:hover {
+  &.selected {
     background-color: #000000;
     color: #ffffff;
+  }
+
+  &:hover {
+    outline: 1px solid #000000;
   }
 }
 
