--- a/src/components/favoritesAutocomplete/FavoritesAutoComplete.module.scss
+++ b/src/components/favoritesAutocomplete/FavoritesAutoComplete.module.scss
@@ -1,6 +1,7 @@
 .autoCompleteContainer {
   margin-top: 20px;
   position: relative;
+  padding: 0 2px;
 }
 
 .albumSuggestions {
